--- a/style.css
+++ b/style.css
@@ -38,37 +38,43 @@ body .carousel > .items > .item{
     position: absolute; top: 50%; left: 50%;
     height: 90%; width: 90%; 
     transition: .6s ease all;
+
+    /* for the background */
+    background-position: center;
+    background-size: 100%;
+    border-radius: 21px ;
+    border: 2px solid black;
 }
 body .carousel > .items > .item.active{
     transform: translate(-50% ,-50%);
 }
 body .carousel > .items > .item:not(.item.active, .item.active ~ .item){transform: translate(-200%, -50%);}
 body .carousel > .items > .item.active~.item{transform: translate(100%, -50%);}
-/* colored items */
+/* custom backgrounds for the items */
 body .carousel > .items > .item:nth-child(1){
-    background: #000;
+    background-image: url(imgs/img1.jpg);
 }
 body .carousel > .items > .item:nth-child(2){
-    background: rgb(255, 0, 0);
+    background-image: url(imgs/img2.jpg);
 }
 body .carousel > .items > .item:nth-child(3){
-    background: rgb(187, 255, 0);
+    background-image: url(imgs/img3.jpg);
 }
 body .carousel > .items > .item:nth-child(4){
-    background: rgb(0, 255, 221);
+    background-image: url(imgs/img4.jpg);
 }
 body .carousel > .items > .item:nth-child(5){
-    background: rgb(38, 0, 255);
+    background-image: url(imgs/img5.jpg);
 }
 body .carousel > .items > .item:nth-child(6){
-    background: rgb(255, 0, 255);
+    background-image: url(imgs/img6.jpg);
 }
  
 
 /* carousel-lines */
 body .carousel > .lines{
     width: 100%; height: 10px;
-    position: absolute; bottom: 2%;
+    position: absolute; bottom: 1%;
     display: flex; justify-content: center; align-items: center;
 }
 body .carousel > .lines > .line{
