--- a/v1.0/styles/ay-carousel.css
+++ b/v1.0/styles/ay-carousel.css
@@ -38,7 +38,7 @@ body .JfwrbnD{
 .JfwrbnD > .items > .item{
     position: absolute; top: 50%; left: 50%;
     height: 90%; width: 90%; 
-    transition: .6s ease all;
+    transition: .8s ease-in-out all;
 
     /* for the background */
     background-position: center;
@@ -52,23 +52,23 @@ body .JfwrbnD{
 .JfwrbnD > .items > .item:not(.item.active, .item.active ~ .item){transform: translate(-160%, -50%);}
 .JfwrbnD > .items > .item.active~.item{transform: translate(60%, -50%);}
 /* custom backgrounds for the items */
-.JfwrbnD > .items > .item:nth-child(1){
-    background-image: url(imgs/img1.jpg);
+.JfwrbnD.first-one > .items > .item:nth-child(1){
+    background-image: url(../imgs/img1.jpg);
 }
-.JfwrbnD > .items > .item:nth-child(2){
-    background-image: url(imgs/img2.jpg);
+.JfwrbnD.first-one > .items > .item:nth-child(2){
+    background-image: url(../imgs/img2.jpg);
 }
-.JfwrbnD > .items > .item:nth-child(3){
-    background-image: url(imgs/img3.jpg);
+.JfwrbnD.first-one > .items > .item:nth-child(3){
+    background-image: url(../imgs/img3.jpg);
 }
-.JfwrbnD > .items > .item:nth-child(4){
-    background-image: url(imgs/img4.jpg);
+.JfwrbnD.first-one > .items > .item:nth-child(4){
+    background-image: url(../imgs/img4.jpg);
 }
-.JfwrbnD > .items > .item:nth-child(5){
-    background-image: url(imgs/img5.jpg);
+.JfwrbnD.first-one > .items > .item:nth-child(5){
+    background-image: url(../imgs/img5.jpg);
 }
-.JfwrbnD > .items > .item:nth-child(6){
-    background-image: url(imgs/img6.jpg);
+.JfwrbnD.first-one > .items > .item:nth-child(6){
+    background-image: url(../imgs/img6.jpg);
 }
  
 
@@ -83,7 +83,7 @@ body .JfwrbnD{
     padding: 0 4px;
     border-left: 1px solid white; border-right: 1px solid white;
     flex-grow: 1;
-    transition: .4s ease flex-grow;
+    transition: .5s ease flex-grow;
     cursor: pointer;
 }
 .JfwrbnD > .lines > .line:first-child, .JfwrbnD > .lines > .line:first-child.active{
